@@ -42,6 +42,7 @@
     <legend>My Podcasts</legend>
     <ul id="my_podcasts">
     </ul>
+
   </fieldset>
 
   <div id="feed_viewer"></div>
