@@ -37,11 +37,13 @@ from django.core import serializers
 from django.utils import simplejson
 from django.http import HttpResponse, HttpResponseRedirect
 
+import logging
+import re
+import time
 
 #
 # Import Local modules
 #
-import logging
 
 #
 # Module
@@ -128,3 +130,59 @@ def same_user_only():
         return newfunc
 
     return decorator
+
+def convert_feed_to_entries(parsed_feed):
+    """Process the entries in the feed and return
+    a sequence of dictionaries with interesting
+    values.
+    """
+    entries = []
+    for e in parsed_feed['entries']:
+        new_entry = {}
+        new_entry.update(e)
+        del new_entry['summary_detail']
+        del new_entry['title_detail']
+        del new_entry['updated_parsed']
+        for attr in [ 'title', 'summary' ]:
+            new_entry[attr] = strip_html(new_entry[attr])
+        entries.append(new_entry)
+        logging.debug(new_entry)
+    return entries
+
+
+##
+# Removes HTML markup from a text string.
+#
+# @param text The HTML source.
+# @return The plain text.  If the HTML source contains non-ASCII
+#     entities or character references, this is a Unicode string.
+def strip_html(text):
+    """Removes HTML markup from a text string.
+    
+    From http://effbot.org/zone/re-sub.htm#strip-html
+    """
+    def fixup(m):
+        text = m.group(0)
+        if text[:1] == "<":
+            return "" # ignore tags
+        if text[:2] == "&#":
+            try:
+                if text[:3] == "&#x":
+                    return unichr(int(text[3:-1], 16))
+                else:
+                    return unichr(int(text[2:-1]))
+            except ValueError:
+                pass
+        elif text[:1] == "&":
+            import htmlentitydefs
+            entity = htmlentitydefs.entitydefs.get(text[1:-1])
+            if entity:
+                if entity[:2] == "&#":
+                    try:
+                        return unichr(int(entity[2:-1]))
+                    except ValueError:
+                        pass
+                else:
+                    return unicode(entity, "iso-8859-1")
+        return text # leave as is
+    return re.sub("(?s)<[^>]*>|&#?\w+;", fixup, text)
