@@ -408,3 +408,25 @@ div.title {
   margin-left: 5%;
   text-decoration: none;
 }
+
+/*
+** Feed viewer
+*/
+
+#feed_viewer { 
+  border: 1px solid #737153; /* dark brown */
+  margin: 1em;
+  padding: 1em;
+  background-color: #eeeeee;
+}
+
+.podcast_entry { 
+}
+
+.podcast_entry_title { 
+  font-weight: bold;
+}
+
+.podcast_entry_summary { 
+  margin-left: 2em;
+}
